Fixed project logo wrapping

--- a/webapp/src/main/webapp/assets/stylesheets/bs-common-1.0.150320.css
+++ b/webapp/src/main/webapp/assets/stylesheets/bs-common-1.0.150320.css
@@ -891,7 +891,7 @@ p.center {
 }
 
 .project-logo {
-    display: table-cell;
+    /* display: table-cell; */
 }
 .project-logo img{
     height: 50px !important;
